--- a/style/style.css
+++ b/style/style.css
@@ -43,8 +43,12 @@ nav .logo {
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  text-decoration: none;
+  color: black;
 }
 
 select {
@@ -161,6 +165,9 @@ select {
     text-align: right;
 }
 
+.goods {
+  margin-bottom: 100px;
+}
   #cart .desc {
     color: #001a34;
     line-height: 18px;
@@ -174,17 +181,33 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    font-weight: 700;
     margin-top: 15%;
+    font-size: 16px;
   }
 
-  .filter-price_title {
-    display: block;
-    font-size: 14px;
-    line-height: 13px;
-    margin-bottom: 10px;
-    font-weight: 700;
+  label {
+    display: inline-block;
+    margin-bottom: 20px;
   }
+
+  .sidebar-expanded {
+    width: 230px;
+  }
+  .sidebar-collapsed {
+    width: 60px;
+  }
+
+  .sidebar-submenu {
+    margin-top: 12px;
+    line-height: 1;
+  }
+
+  .filter-block,
+  .filter-title {
+    line-height: 4;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  }
+
 
   .filter-price_range {
     display: -webkit-box;
@@ -304,10 +327,15 @@ select {
   }
 
   .card {
+    padding: 20px;
+    margin: 10px;
     border-radius: 0;
     border: none;
+    transition: box-shadow 200ms ease-in-out 0s;
   }
-
+  .card:hover {
+    box-shadow: 0 0 7px rgb(101 101 101 / 25%);
+  }
   .aside {
     border-right: 1px solid rgba(0, 0, 0, 0.05);
   }
