--- a/style/style.css
+++ b/style/style.css
@@ -219,6 +219,11 @@ a:hover {
   margin-bottom: 0;
 }
 
+#filterContent span img {
+  width: 8px;
+  height: 8px;
+}
+
 .goods {
   margin-bottom: 100px;
 }
